fix component gallery overflow

--- a/src/renderer/components/StoryComponentGalleryView/StoryComponentGallery.scss
+++ b/src/renderer/components/StoryComponentGalleryView/StoryComponentGallery.scss
@@ -121,6 +121,7 @@
   }
   &.expanded {
     height: 300px;
+    overflow-y: scroll;
     .expander {
       z-index: 99;
       .icon {
